--- a/4.MultipleServers.yml
+++ b/4.MultipleServers.yml
@@ -6,7 +6,7 @@
   - name: Querying for Telnet Install
     yum: pkg=telnet state=present update_cache=true
  
-- hosts: dbservers
+- hosts: agents
   tasks:
   - name: Install telnet on Local Server
     yum: pkg=telnet state=installed update_cache=true
