--- a/1.Apache.yml
+++ b/1.Apache.yml
@@ -5,7 +5,7 @@
     tasks: 
     - name: Install Apache Server
       yum:
-        name: {{package}}
+        name: "{{package}}"
         state: present
       notify:
       - startservice
@@ -21,5 +21,5 @@
     handlers:
     - name: startservice
       service:
-        name: {{package}}
+        name: "{{package}}"
         state: restarted
